<resources>
    <string name="app_name">OrderManagerForAndroid</string>
    <string name="menu_title">Order Manager</string>
    <string name="donut_button_text">Donuts</string>
    <string name="sandwich_button_text">Sandwiches</string>
    <string name="coffee_button_text">Coffee</string>
    <string name="current_order_button_text">Current Order</string>
    <string name="order_list_button_text">Order List</string>
    <string name="back">Back</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="plus">+</string>
    <string name="display_of_a_delicious_donut">Display of a delicious donut</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="total_amount">Total Amount :</string>
    <string name="sales_tax">Sales Tax :</string>
    <string name="subtotal">Subtotal :</string>
    <string name="order">Order #</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="order_sandwich">Order Sandwich</string>
    <string name="bread">Bread</string>
    <string name="protein">Protein</string>
    <string name="add_ons">Add-ons</string>
    <string name="quantity">Quantity</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="cheese">Cheese</string>
    <string name="onion">Onion</string>
    <string name="add_to_order">Add to Order</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="size">Size</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="mocha">Mocha</string>
    <string name="caramel">Caramel</string>
    <string name="sub_total">Sub-total</string>

</resources>