<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.0" android:scaleX="3" android:scaleY="3"
            android:layout_marginTop="24dp" android:id="@+id/textView"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="70dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/linearLayout" android:layout_marginBottom="300dp">
        <Button
                android:layout_width="match_parent"
                android:layout_height="150dp" android:id="@+id/donutButton" android:text="@string/donut_button_text"
                android:textSize="24sp" android:textStyle="bold"/>
        <Button
                android:text="@string/sandwich_button_text"
                android:layout_width="match_parent"
                android:layout_height="150dp" android:id="@+id/sandwichButton" android:textStyle="bold"
                android:textSize="24sp"/>
        <Button
                android:text="@string/coffee_button_text"
                android:layout_width="match_parent"
                android:layout_height="150dp" android:id="@+id/coffeeButton" android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="416dp"
            android:layout_height="227dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/button16" android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" android:text="@string/current_order_button_text"/>
        <Button
                android:text="@string/order_list_button_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/button17" android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>