<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="110dp"
                android:layout_marginBottom="660dp"
                android:text="@string/order_coffee"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/backButtonCoffee"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="back"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/sweetCreamCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="109dp"
                android:text="@string/sweet_cream"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backButtonCoffee" />

            <Spinner
                android:id="@+id/coffeeSizeSpinner"
                android:layout_width="155dp"
                android:layout_height="52dp"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toTopOf="@+id/coffeeQuantitySpinner"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:layout_marginTop="64dp"
                android:text="@string/size"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/irishCreamCheckBox" />

            <Button
                android:id="@+id/coffeeAddToOrderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="36dp"
                android:text="@string/add_to_order"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/frenchVanillaCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="28dp"
                android:text="@string/french_vanilla"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sweetCreamCheckBox" />

            <CheckBox
                android:id="@+id/irishCreamCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="34dp"
                android:text="@string/irish_cream"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/coffeeSizeSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frenchVanillaCheckBox" />

            <CheckBox
                android:id="@+id/mochaCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="92dp"
                android:text="@string/mocha"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sweetCreamCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <CheckBox
                android:id="@+id/caramelCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="83dp"
                android:text="@string/caramel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frenchVanillaCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/mochaCheckBox" />

            <Spinner
                android:id="@+id/coffeeQuantitySpinner"
                android:layout_width="151dp"
                android:layout_height="58dp"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="88dp"
                app:layout_constraintBottom_toTopOf="@+id/coffeeAddToOrderButton"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginBottom="108dp"
                android:text="@string/quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/coffeeAddToOrderButton"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="79dp"
                android:layout_marginBottom="42dp"
                android:text="@string/subtotal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/coffeeAddToOrderButton"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/subTotalTextViewCoffee"
                android:layout_width="119dp"
                android:layout_height="43dp"
                android:layout_marginEnd="124dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/coffeeAddToOrderButton"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>