<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SandwichActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="57dp"
            android:text="@string/order_sandwich"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/breadSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="64dp"
            android:onClick="back"
            android:text="@string/back"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="39dp"
            android:text="@string/bread"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/breadSpinner"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="34dp"
            android:text="@string/protein"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/proteinSpinner"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="13dp"
            android:text="@string/add_ons"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/lettuceCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/addToOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="117dp"
            android:layout_marginTop="157dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="45dp"
            android:text="@string/add_to_order"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cheeseCheckBox"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/lettuceCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="44dp"
            android:text="@string/lettuce"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/tomatoCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/proteinSpinner" />

        <CheckBox
            android:id="@+id/tomatoCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="43dp"
            android:text="@string/lettuce"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/onionCheckBox"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/cheeseCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="106dp"
            android:layout_marginBottom="39dp"
            android:text="@string/cheese"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/sandwichQuantitySpinner"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/onionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="89dp"
            android:layout_marginBottom="121dp"
            android:text="@string/onion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/subTotalTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="316dp"
            android:layout_marginBottom="117dp"
            android:text="@string/subtotal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/breadSpinner"
            android:layout_width="174dp"
            android:layout_height="66dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="120dp"
            android:entries="@array/bread_array"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/proteinSpinner"
            android:layout_width="177dp"
            android:layout_height="63dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="69dp"
            android:entries="@array/protein_array"
            app:layout_constraintBottom_toTopOf="@+id/tomatoCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breadSpinner" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="46dp"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/sandwichQuantitySpinner"
            android:layout_width="168dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="33dp"
            app:layout_constraintBottom_toTopOf="@+id/subTotalTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <TextView
            android:id="@+id/subTotalTextView"
            android:layout_width="127dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="165dp"
            android:layout_marginBottom="15dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/addToOrderButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>