<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentOrderActivity">

    <Button
            android:text="@string/back"
            android:layout_width="125dp"
            android:layout_height="125dp" android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:onClick="back"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderListHeader"
            android:scaleX="3" android:scaleY="3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="72dp" app:layout_constraintStart_toEndOf="@+id/backButton"
    />
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton"
            app:layout_constraintHorizontal_bias="0.003" android:layout_marginTop="15dp"
            android:id="@+id/orderRecyclerView"
            app:layout_constraintBottom_toTopOf="@+id/subTotalLabel" android:layout_marginBottom="15dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount" android:scaleX="2" android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="100dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            android:id="@+id/totalAmountLabel"/>
    <TextView
            android:text="@string/sales_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/salesTaxLabel"
            android:scaleX="2" android:scaleY="2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="96dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/totalAmountLabel"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/subTotalLabel"
            android:scaleX="2" android:scaleY="2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="102dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/salesTaxLabel"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/cancelOrderButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="144dp"
            android:layout_marginEnd="144dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/totalAmountLabel"
            app:layout_constraintHorizontal_bias="0.513" app:layout_constraintVertical_bias="0.0"
            android:textSize="18sp" android:layout_marginTop="20dp" android:onClick="onPlaceOrderButtonClicked"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalDisplay"
            android:scaleX="2" android:scaleY="2"
            android:layout_marginStart="75dp"
            app:layout_constraintStart_toEndOf="@+id/totalAmountLabel" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="99dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/salesTaxDisplay"
            android:scaleX="2" android:scaleY="2"
            android:layout_marginStart="63dp"
            app:layout_constraintStart_toEndOf="@+id/salesTaxLabel" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="136dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/subTotalDisplay"
            android:scaleX="2" android:scaleY="2"
            android:layout_marginStart="65dp"
            app:layout_constraintStart_toEndOf="@+id/subTotalLabel" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="177dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>