<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderListActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalDisplay"
            android:scaleX="2" android:scaleY="2"
            android:layout_marginStart="75dp"
            app:layout_constraintStart_toEndOf="@+id/totalAmountLabel" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="99dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount" android:scaleX="2" android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="100dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            android:id="@+id/totalAmountLabel"/>
    <Button
            android:text="@string/cancel_order"
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/cancelOrderButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="144dp"
            android:layout_marginEnd="144dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/totalAmountLabel"
            app:layout_constraintHorizontal_bias="0.513" app:layout_constraintVertical_bias="0.0"
            android:textSize="18sp" android:layout_marginTop="20dp" android:onClick="onCancelOrderButtonClicked"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderListHeader"
            android:scaleX="3" android:scaleY="3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp"
            android:text="@string/order" android:layout_marginStart="107dp"
            app:layout_constraintStart_toEndOf="@+id/backButton" android:layout_marginEnd="116dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/back"
            android:layout_width="125dp"
            android:layout_height="125dp" android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:onClick="back"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="61dp" android:id="@+id/orderSpinner"
            android:layout_marginStart="46dp"
            app:layout_constraintStart_toEndOf="@+id/backButton" android:layout_marginEnd="52dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/orderListHeader"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/orderSpinner" android:id="@+id/ordersListView"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/totalAmountLabel"/>
</androidx.constraintlayout.widget.ConstraintLayout>